Ajouts de tests unitaires et de nouvelles dépendances